# Appointment_Booking_System

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/v1/: api.py
app/api/v1/endpoints/: superadmin.py
app/background/: celery_app.py
app/background/tasks/: notifications.py  reminders.py
app/core/: config.py  constants.py  dependencies.py  exceptions.py  logging.py  security.py
app/db/: database.py
app/middleware/: security_middleware.py
app/modules/auth/: schemas.py
app/modules/super_admin/: model.py  repository.py  schemas.py  service.py
scratch/: test_db_connection.py
