[project]
name = "appointment-booking-system"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "gunicorn (>=26.0.0,<27.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "python-multipart (>=0.0.28,<0.0.29)",
    "anyio (>=4.13.0,<5.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "greenlet (>=3.5.0,<4.0.0)",
    "redis (>=7.4.0,<8.0.0)",
    "hiredis (>=3.3.1,<4.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "slowapi (>=0.1.9,<0.2.0)",
    "limits (>=5.8.0,<6.0.0)",
    "python-slugify (>=8.0.4,<9.0.0)",
    "structlog (>=25.5.0,<26.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "supabase (>=2.30.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
